tests/Checker/everything/errors/6a.vc
int main() {
    boolean a = "123";
    return 1;
}
